--- a/MyEcsGameMode/MyEcsGameMode.csproj
+++ b/MyEcsGameMode/MyEcsGameMode.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SampSharp.GameMode" Version="0.9.0" />
+    <PackageReference Include="SampSharp.Entities" Version="0.9.0" />
   </ItemGroup>
 
 </Project>
